fix: убран   overflow-y: scroll;

--- a/src/pages/main-page/MainPage.module.scss
+++ b/src/pages/main-page/MainPage.module.scss
@@ -3,5 +3,4 @@
   flex-direction: column;
   gap: 40px;
   width: 100%;
-  overflow-y: scroll;
 }
